--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
+fastapi = {extras = ["all"], version = "^0.111.0"}
 
 
 [build-system]
