--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = {extras = ["all"], version = "^0.111.0"}
+sqlalchemy = "^2.0.31"
+alembic = "^1.13.2"
+asyncpg = "^0.29.0"
+greenlet = "^3.0.3"
 
 
 [build-system]
